<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:autofillHints="name"
        android:padding="16dp"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="16dp"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"/>

</LinearLayout>
